Перехожу к созданию фрагментов. Последующие изменения буду пилить в ветке "framgents".

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="name">Name:</string>
     <string name="count_hint">Count:</string>
     <string name="save_text_button">Save</string>
+    <string name="error_input_name">Name error</string>
+    <string name="error_input_count">Count error</string>
 </resources>
